--- a/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
@@ -1,5 +1,17 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" asp-href-include="/lib/bootstrap/dist/**/*.min.css"
+          asp-href-exclude="**/*-reboot*,**/*-grid" />
+
+    <title></title>
+</head>
+<body>
+    <div class="container body-container">
+        <div class="row">
+            @RenderBody()
+        </div>
+    </div>
+</body>
+</html>
