--- a/ProjektuppgiftAspDotNet/Views/_ViewImports.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ProjektuppgiftAspDotNet.Models
+@using ProjektuppgiftAspDotNet.Models.ViewModel
 @using ProjektuppgiftAspDotNet.Interface
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
