--- a/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
@@ -8,10 +8,13 @@
     <title></title>
 </head>
 <body>
+    <nav class="navbar navbar-dark">
+    <a asp-controller="Home" asp-action="Index">Write Something</a>
+    </nav>
     <div class="container body-container">
-       
-            @RenderBody()
-       
+
+        @RenderBody()
+
     </div>
 </body>
 </html>
