--- a/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
@@ -9,7 +9,8 @@
 </head>
 <body>
     <nav class="navbar navbar-dark">
-    <a asp-controller="Home" asp-action="Index">Write Something</a>
+        <a asp-controller="Home" asp-action="Index" class="nav-item nav-link">Write Something</a>
+        <a asp-controller="Home" asp-action="AllComments" class="nav-item nav-link">View</a>
     </nav>
     <div class="container body-container">
 
