--- a/ProjektuppgiftAspDotNet/Views/Shared/Comments.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Shared/Comments.cshtml
@@ -1,5 +1,5 @@
-﻿@model User
+﻿@model CommentListViewModel
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
-<h1>@Model.Name</h1>
+<h1>@Model.GetUser</h1>
