added a like button and it works

--- a/ProjektuppgiftAspDotNet/Views/Home/AllComments.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Home/AllComments.cshtml
@@ -8,8 +8,13 @@
 @foreach (var item in Model.GetUser)
 {
     <div class="card">
-        <h2 class="card-header">@item.Name</h2>
+        <div class="card-header">
+            <h2>@item.Name</h2>
+            <a asp-for="@item.Like"> @item.Like</a>
+
+        </div>
         <h2 class="card-body">@item.Message</h2>
+        <a asp-action="Like" asp-route-id="@item.Id">Like</a>
         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
         <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
     </div>
