--- a/ProjektuppgiftAspDotNet/Views/_ViewImports.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ProjektuppgiftAspDotNet.Models
 @using ProjektuppgiftAspDotNet.Models.ViewModel
 @using ProjektuppgiftAspDotNet.Interface
+@addTagHelper *, ProjektuppgiftAspDotNet
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
