--- a/ProjektuppgiftAspDotNet/Views/Shared/Components/User/Default.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Shared/Components/User/Default.cshtml
@@ -1,8 +1,18 @@
 ﻿@model IEnumerable<User>
 
-<div>
+<div >
     @foreach (var item in Model)
     {
-        <h1>@item.Name</h1>
+    <div class="card">
+        <div class="card-header">
+            <h2>@item.Name</h2>
+            <a asp-for="@item.Like"> @item.Like</a>
+
+        </div>
+        <h2 class="card-body">@item.Message</h2>
+        <a asp-action="Like" asp-route-id="@item.Id">Like</a>
+        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+    </div>
     }
 </div>
