--- a/ProjektuppgiftAspDotNet/Views/Home/AllComments.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Home/AllComments.cshtml
@@ -10,6 +10,7 @@
     <div class="card">
         <div class="card-header">
             <h2>@item.Name</h2>
+            <h3>@item.Posted</h3>
             <a asp-for="@item.Like"> @item.Like</a>
 
         </div>
