log in complete

--- a/ProjektuppgiftAspDotNet/Views/Account/Login.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Account/Login.cshtml
@@ -20,4 +20,5 @@
         <input asp-for="Password" class="form-control" />
     </div>
     <button type="submit" class="btn btn-primary">Log In</button>
+    <a asp-controller="CreateUser" asp-action="Create">Sign Up</a>
 </form>
