--- a/ProjektuppgiftAspDotNet/Views/Home/Index.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+<a asp-controller="Account" asp-action="Logout" class="nav-item nav-link">Logout</a>
 <h2>Forum</h2>
 <form asp-action="Index" method="post" role="form">
     <div class="form-group">
