--- a/ProjektuppgiftAspDotNet/Views/Account/Login.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Account/Login.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ProjektuppgiftAspDotNet.Models.ViewModels.LoginModel
 @{
     ViewData["Title"] = "Login";
+    Layout = "_LoginLayout";
 }
 
 <div class="bg-primary m-1 p-1 text-white">
