--- a/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-dark">
         <a asp-controller="Home" asp-action="Index" class="nav-item nav-link">Write Something</a>
-        
+        <a asp-controller="Account" asp-action="Logout" class="nav-item nav-link">Logout</a>
         
 
     </nav>
