--- a/ProjektuppgiftAspDotNet/Views/Shared/Components/User/Default.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Shared/Components/User/Default.cshtml
@@ -6,6 +6,7 @@
     <div class="card">
         <div class="card-header">
             <h2>@item.Name</h2>
+            <h4>@item.Posted</h4>
             <a asp-for="@item.Like"> @item.Like</a>
 
         </div>
