--- a/ProjektuppgiftAspDotNet/Views/Shared/Components/UserSearchBar/Default.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Shared/Components/UserSearchBar/Default.cshtml
@@ -33,22 +33,12 @@
 
 </script>
 
-
+<h1>hej</h1>
 
 <form asp-action="Search" role="form"
       method="post">
-    <input id="tags"  asp-for="Email" type="text" name="Prefix" class="form-control"/>
-   
+    <input id="tags" asp-for="Email" type="text" name="Prefix" class="form-control" />
+
 
     <input type="submit" class="auto" />
 </form>
-
-
-
-
-
-
-
-
-
-
