--- a/ProjektuppgiftAspDotNet/Views/Home/Search.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Home/Search.cshtml
@@ -40,7 +40,7 @@
     <input id="tags"  asp-for="Email" type="text" name="Prefix" class="form-control"/>
    
 
-    <input type="submit" class="auto" />
+    <input type="submit" class="auto" asp-controller="Profile" asp-action="Index" value="Find user" />
 </form>
 
 
