--- a/ProjektuppgiftAspDotNet/Views/Shared/Components/Search/Default.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Shared/Components/Search/Default.cshtml
@@ -41,6 +41,7 @@
         <input id="tags" asp-for="Email" type="text" name="Prefix" class="form-control" />
 
 
-        <input type="submit" class="auto" value="find" />
+        <input type="submit" class="auto" value="find" 
+               asp-controller="Profile" asp-action="Index" />
     </div>
 </form>
