--- a/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
         <a asp-controller="Home" asp-action="Index" class="nav-link ">Write Something</a>
 
     </nav>
-    <vc:search></vc:search>
+    @*<vc:search></vc:search>*@
 
     <div class="container body-container">
 
