--- a/ProjektuppgiftAspDotNet/Views/Profile/Index.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Profile/Index.cshtml
@@ -1,3 +1,10 @@
-﻿@model  AppUser
+﻿@model AppUser
+<script src="~/js/script.js"></script>
 
-   <h1>@Model.UserName</h1>
+
+<div class="card ">
+    <h1 class="card-title">@Model.UserName</h1>
+    <img id="myPicture" class="card-img" src="" />
+    
+
+</div>
