--- a/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
@@ -15,10 +15,11 @@
 
             <a asp-controller="Account" asp-action="Logout">Logout</a>
         </div>
-        <a asp-controller="Home" asp-action="Index" class="nav-link ">Write Something</a>
+        <a asp-controller="Home" asp-action="Search" class="nav-link ">Find Friends</a>
+       
 
     </nav>
-    @*<vc:search></vc:search>*@
+  
 
     <div class="container body-container">
 
