--- a/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Shared/_Layout.cshtml
@@ -12,14 +12,15 @@
         <div class="navbar-brand">
 
             <vc:user-identity></vc:user-identity>
+            <vc:search></vc:search>
 
             <a asp-controller="Account" asp-action="Logout">Logout</a>
         </div>
         <a asp-controller="Home" asp-action="Search" class="nav-link ">Find Friends</a>
-       
+      
 
     </nav>
-  
+   
 
     <div class="container body-container">
 
