--- a/ProjektuppgiftAspDotNet/Views/Home/Index.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Home/Index.cshtml
@@ -4,19 +4,20 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Forum</h2>
+
 <form asp-action="Index" method="post" role="form">
-    
+ 
     <div class="form-group">
+        <h2>Forum</h2>
         <label asp-for="Message"></label>
-        <textarea asp-for="Message"></textarea>
+        <textarea class="" asp-for="Message"></textarea>
     </div>
     <div class="form-group">
         <input type="submit" class="btn btn-primary" value="Send" />
     </div>
 
 </form>
-
+<vc:friends></vc:friends>
 <vc:user></vc:user>
 
 
