--- a/ProjektuppgiftAspDotNet/Views/Profile/Index.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Profile/Index.cshtml
@@ -3,7 +3,7 @@
 
 
 <div class="card ">
-    <h1 class="card-title">@Model.UserName >
+    <h1 class="card-title">@Model.UserName
         <vc:friends
             add="true" 
             name="@Model.UserName">
