--- a/ProjektuppgiftAspDotNet/Views/Friends/Index.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Friends/Index.cshtml
@@ -1,6 +1,9 @@
-﻿@model AppUser
-
-@Model.UserName
+﻿@model List<string>
 
 
+
+@foreach (var item in Model)
+{
+    <h1>@item</h1>
+}
 <h1>hej</h1>
