--- a/ProjektuppgiftAspDotNet/Views/Profile/Index.cshtml
+++ b/ProjektuppgiftAspDotNet/Views/Profile/Index.cshtml
@@ -3,13 +3,15 @@
 
 
 <div class="card ">
-    <h1 class="card-title">@Model.UserName
-        <vc:friends
-            add="true" 
-            name="@Model.UserName">
-        </vc:friends></h1>
+    <h1 class="card-title">
+        @Model.UserName
+        <img id="myPicture" class="card-img-top" src="" />
+        <vc:friends add="true"
+                    name="@Model.UserName">
+        </vc:friends>
+    </h1>
    
-    <img id="myPicture" class="card-img" src="" />
+  
     
 
 </div>
